version/0.19/_sources/api/solver/_autosummary/settings/gauge_pressure.rst.txt
:orphan:

.. _gauge_pressure:

gauge_pressure
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.gauge_pressure.gauge_pressure
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_8>`                 Specify how the boundary condition will be defined.

:ref:`value <value_4>`                              Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`momentum <momentum>`                                                              Help not available.

:ref:`momentum <momentum_5>`                                                            Help not available.

:ref:`pressure_far_field_child <pressure_far_field_child>`       'child_object_type' of pressure_far_field.

:ref:`phase_child <phase_child_17>`                                           'child_object_type' of phase.

:ref:`momentum <momentum_7>`                                                            Help not available.

==========================================================   ==============================================

